Fix source code width

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@ li {
 blockquote, .source {
     border-left: 2px solid #0a9bf0;
     padding-left: 2em;
+    padding-right: 2em;
     margin-left: 2em;
 }
 body > footer {
@@ -78,7 +79,8 @@ body > footer {
 .source {
     background: #444;
     color: white;
-    max-width: 50%;
+    display: table;
+    min-width: 50%;
     padding-top: 0.5em;
     padding-bottom: 0.5em;
     border-color: white;
