Fix Foo/Bar literals in code example

--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@ body > footer {
               Ether's interface is similar to mtl's interface, except most
               functions require a tag. So let's create some tags:
 <pre class="source">
-ethereal <span class="lit">"Foo"</span> <span class="lit">"foo"</span>
-ethereal <span class="lit">"Bar"</span> <span class="lit">"bar"</span>
+ethereal <span class="lit">"Foo" "foo"</span>
+ethereal <span class="lit">"Bar" "bar"</span>
 </pre>
               <tt>ethereal</tt> is a Template Haskell function that expands to
               an empty data declaration and a value-level proxy. If for some
