Update copyright and mention Typeable.io

--- a/index.html
+++ b/index.html
@@ -351,17 +351,19 @@ logDiv x y = do
             need to use type annotations when using implicit tagging, so for
             anything polymorphic prefer the explicit style.
             </p>
-            <h1>&mdash; This is magic!</h1>
+            <h1>Production Ready?</h1>
             <p>
-              I agree. Now go get it, <a href="https://hackage.haskell.org/package/ether">it's on Hackage</a>.
-              I have no idea why no one else wrote such a package, as I am
-              not the first one to discover the solution.
+              Yes! Ether is not a research project&mdash;at
+              <a href="https://typeable.io/">Typeable IO</a> we use Ether in
+              production. Get it on
+              <a href="https://hackage.haskell.org/package/ether">Hackage</a> or
+              <a href="https://www.stackage.org/package/ether">Stackage</a>.
             </p>
         </div>
         </section>
       </main>
       <footer>
-        <a href="https://github.com/int-index">Index Int</a>, 2015
+        <a href="https://github.com/int-index">Vladislav Zavialov</a>, 2017
       </footer>
     </body>
 </html>
